Bug 423842 - Can't show the panel with touch
Summary: Can't show the panel with touch
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2020-07-03 14:50 UTC by Zamundaaa
Modified: 2020-08-06 10:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zamundaaa 2020-07-03 14:50:23 UTC
SUMMARY
If the panel is set to"windows can cover" and an application covers it or just simply to auto hide, it can't be made to shown with touch.

STEPS TO REPRODUCE
1. set panel to auto hide

OBSERVED RESULT
The panel doesn't show when the screen edge is touched.

EXPECTED RESULT
The panel should show itself when swiping up (right, left, down in other panel configurations).

SOFTWARE/OS VERSIONS
Windows: -
macOS: -
Linux/KDE Plasma: Manjaro KDE, plasma-git packages
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
As this does conflict with the screen edges, in my opinion we have three options:
* the panel should have priority so that the screen edge action only gets triggered when the panel is already visible
* the screen edge at sides where there's a panel should just be disabled
* make a "show all panels" screen edge action (obviously one of the worse ideas)
Comment 1 Zamundaaa 2020-07-09 22:54:43 UTC
So, after testing around with the screen edge size a bit (with the new patch on gilab) I've noticed a few things:

1) screen edges just don't work in general if I actually do swipe from the edge, no matter how big the screen edge area is set to

2) Directly tapping on it and swiping inwards does work

3) the panel and the screen edge action do indeed conflict with each other right now

4) the screen edge area blocks touch input

5) after successfully showing the panel one time the screen edge completely stops working, it apparently completely disappears (as the area accepts touch inputs again)
Comment 2 Bug Janitor Service 2020-08-04 13:39:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/169
Comment 3 Nate Graham 2020-08-04 15:33:27 UTC
Fixed with https://invent.kde.org/plasma/kwin/-/commit/40b52eb4a413d0810ef712592d45b2ae4322715f in Plasma 5.20!
Comment 4 Zamundaaa 2020-08-06 10:37:13 UTC
mostly, yes. The screen edge still disappears after you show the panel with touch but I'm working on fixing that as well :)